--- a/view/product_template_form.xml
+++ b/view/product_template_form.xml
@@ -4,7 +4,7 @@
 <data>
     <xpath expr="/form/notebook" position="inside">
         <page string="Sectors" id="sectors">
-            <field name="related_sectors" widget="multiselection"/>
+            <field name="related_sectors"/>
         </page>
     </xpath>
 </data>
